<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:keepScreenOn="true"
    style="@style/DefaultBackground"
    tools:context=".activities.SettingsActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true"
        android:layout_above="@+id/saveSettingsButton"
        android:padding="15dp">

        <TableRow android:weightSum="5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/visualacuity_chart_name"
                android:id="@+id/visualacuitychartNameTV"
                android:layout_gravity="right"
                android:layout_weight="1" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/visualacuitychartSpinner"
                android:layout_gravity="left"
                android:layout_weight="4" />

        </TableRow>

        <TableRow android:weightSum="5">

            <TextView
                android:id="@+id/calibrateHearingTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:text="@string/calibrate_settings"
                android:textSize="30sp" />

            <Button
                android:id="@+id/calibrateHearingTestButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="20dp"
                android:text="@string/calibrate_button"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="5">

            <TextView
                android:id="@+id/schoolnameTV"
                android:layout_width="202dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:text="@string/school_name"
                android:textSize="30sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/schoolList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="13dp"
                android:layout_weight="4" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/addSchoolButton"
                    android:padding="20dp"
                    android:text="@string/add_school"
                    android:textSize="30sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/removeSchoolButton"
                    android:padding="20dp"
                    android:text="@string/remove_school"
                    android:textSize="30sp" />
            </LinearLayout>
        </TableRow>


    </TableLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/saveSettingsButton"
        android:text="@string/save"
        android:gravity="center"
        android:textSize="20sp"
        android:padding="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
