<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@+id/computeLinearLayout">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/front_view"
                android:layout_centerHorizontal="true"
                android:id="@+id/tv_front_view"
                android:textSize="40sp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:id="@+id/linearLayout"
                android:layout_below="@id/tv_front_view">
                <Button
                    android:id="@+id/btn_take_picture1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/photo"/>
                <Button
                    android:id="@+id/btn_load_image1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_image"/>
            </LinearLayout>
            <ImageView
                android:id="@+id/imageView1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/front_view_paint"
                android:layout_below="@id/linearLayout">
            </ImageView>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/side_view"
                android:layout_centerHorizontal="true"
                android:id="@+id/tv_side_view"
                android:textSize="40sp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/tv_side_view"
                android:id="@+id/linearLayout2">
                <Button
                    android:id="@+id/btn_take_picture2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/photo"/>
                <Button
                    android:id="@+id/btn_load_image2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_image"/>
            </LinearLayout>
            <ImageView
                android:id="@+id/imageView2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/side_view_paint"
                android:layout_below="@id/linearLayout2">
            </ImageView>
        </RelativeLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/computeLinearLayout">
        <Button
            android:id="@+id/btn_compute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compute"/>

        <TextView
            android:id="@+id/tv_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Height: "
            android:textColor="@android:color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Weight: "
            android:textColor="@android:color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_BMI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BMI: "
            android:textColor="@android:color/black"
            android:textSize="25sp" />

    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_go_back"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/go_back"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_cancel"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:text="@string/cancel"/>
</RelativeLayout>