<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/DefaultBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:padding="30dp"
    tools:context=".activities.MonitoringConsultationChoice">

    <FrameLayout
        android:id="@+id/placeholderECA"
        style="@style/ECAPlaceholder"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.7"
        android:longClickable="false">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/choicesLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".15" />

        <TextView
            android:id="@+id/questionMonitoringConsultationChoice"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:gravity="center"
            android:text="@string/MonitoringOrConsultationQuestion"
            android:textSize="@dimen/_20ssp" />

        <Button
            android:id="@+id/monitoringButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15"
            android:text="@string/Monitoring"
            android:textSize="@dimen/_16ssp" />

        <Button
            android:id="@+id/consultationButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:layout_weight="0.15"
            android:text="@string/Consultation"
            android:textSize="@dimen/_16ssp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".15" />

    </LinearLayout>

</LinearLayout>

