<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:keepScreenOn="true"
    style="@style/DefaultBackground"
    tools:context=".activities.MonitoringConsultationChoice">

    <FrameLayout
        android:layout_width="@dimen/activity_eca_big"
        android:layout_height="@dimen/activity_eca_big"
        android:id="@+id/placeholderECA"
        android:longClickable="false"
        style="@style/ECAPlaceholder" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/choicesLayout"
        android:layout_centerInParent="true"
        android:layout_toEndOf="@+id/placeholderECA"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MonitoringOrConsultationQuestion"
            android:textSize="70sp"
            android:gravity="center"
            android:id="@+id/questionMonitoringConsultationChoice"
            android:layout_alignParentTop="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Monitoring"
            android:textSize="50sp"
            android:padding="20dp"
            android:id="@+id/monitoringButton"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/questionMonitoringConsultationChoice"
            android:layout_alignStart="@+id/consultationButton"
            android:layout_alignEnd="@+id/consultationButton" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Consultation"
            android:textSize="50sp"
            android:padding="20dp"
            android:id="@+id/consultationButton"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/monitoringButton"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</RelativeLayout>

